changes in add to favorites ( from spooncular or from my recipes), updating the openapi.yaml
